# bevy_mod_scripting_fennel

./: .gitignore  .prettierrc.toml  Cargo.toml  README.md
assets/scripts/: basic_test.fnl  complex_game_loop.fnl  fennel.lua
examples/: basic_test.rs  complex_game_loop.rs
src/: asset.rs  fennel.rs  lib.rs  main.rs  preload.rs
src/script/: asset.rs  helper.rs  host.rs  lua.rs  mod.rs
