[package]
name = "bevy_mod_scripting_fennel"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_mod_scripting_fennel"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.81"
bevy_mod_scripting = "0.5.0"
bevy_mod_scripting_lua = "0.5.0"

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
  "bevy_asset",
]
