[package]
name = "bevy_mod_scripting_fennel"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_mod_scripting_fennel"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.81"
bevy_mod_scripting = { version = "0.5.0", features = ["luajit", "lua_script_api"] }
bevy_mod_scripting_lua = "0.5.0"

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
  "bevy_asset",
  "file_watcher",
  "multi-threaded",
]

[dev-dependencies]
rand = "0.8.5"

[[example]]
name = "basic_test"
path = "examples/basic_test.rs"
required-features = [
    "bevy_mod_scripting/luajit",
    "bevy_mod_scripting/lua_script_api",
    "bevy/file_watcher",
    "bevy/multi-threaded",
]
